--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="/assets/css/bootstrap.css" />
-  <script src="/assets/js/bootstrap.js"></script>
+  <!--<script src="/assets/js/bootstrap.js"></script>-->
 </head>
 <body>
   <app-root></app-root>
